# Project1_RAG_Multimodal

./: .gitignore  README.md  main_interface.py  pyproject.toml  requirements.txt
agents/: image_descriptor.py  rag_agent.py
data/: layout-parser-paper-output.json
engine/: __init__.py
rag/: __init__.py  vector_store.py
rag/faiss_rag_index/: index.faiss  index.pkl
scripts/: __init__.py
services/: __init__.py
